--- a/backend/package.json
+++ b/backend/package.json
@@ -13,11 +13,14 @@
   "type": "commonjs",
   "dependencies": {
     "bcryptjs": "^3.0.3",
+    "cloudinary": "^2.9.0",
     "cors": "^2.8.6",
     "dotenv": "^17.2.4",
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
-    "mongoose": "^9.2.0"
+    "mongoose": "^9.2.0",
+    "multer": "^2.0.2",
+    "multer-storage-cloudinary": "^2.2.1"
   },
   "devDependencies": {
     "@types/express": "^5.0.6",
